clang/test/BSC/Negative/Generic/Typealias/typealias_redefinition/typealias_redefinition.cbs
// RUN: %clang_cc1  -verify %s

struct S<T> {};//expected-note{{previous definition is here}}
typedef S<T> = struct S<T>; //expected-error{{redefinition of 'S' as different kind of symbol}}

int main() {
    return 0;
}